--- a/docker/cloudbuild.yaml
+++ b/docker/cloudbuild.yaml
@@ -1,16 +1,16 @@
 steps:
 - name: 'gcr.io/cloud-builders/docker'
-  args: ['build', '-t', 'us.gcr.io/$PROJECT_ID/suricata:latest', 'suricata/']
+  args: ['build', '-t', 'us.gcr.io/$PROJECT_ID/suricata:latest', 'docker/suricata/']
 - name: 'gcr.io/cloud-builders/docker'
-  args: ['build', '-t', 'us.gcr.io/$PROJECT_ID/p0f:latest', 'p0f/']
+  args: ['build', '-t', 'us.gcr.io/$PROJECT_ID/p0f:latest', 'docker/p0f/']
 - name: 'gcr.io/cloud-builders/docker'
-  args: ['build', '-t', 'us.gcr.io/$PROJECT_ID/fatt:latest', 'fatt/']
+  args: ['build', '-t', 'us.gcr.io/$PROJECT_ID/fatt:latest', 'docker/fatt/']
 - name: 'gcr.io/cloud-builders/docker'
-  args: ['build', '-t', 'us.gcr.io/$PROJECT_ID/logstash:latest', 'elk/logstash']
+  args: ['build', '-t', 'us.gcr.io/$PROJECT_ID/logstash:latest', 'docker/elk/logstash']
 - name: 'gcr.io/cloud-builders/docker'
-  args: ['build', '-t', 'us.gcr.io/$PROJECT_ID/elasticsearch:latest', 'elk/elasticsearch']
+  args: ['build', '-t', 'us.gcr.io/$PROJECT_ID/elasticsearch:latest', 'docker/elk/elasticsearch']
 - name: 'gcr.io/cloud-builders/docker'
-  args: ['build', '-t', 'us.gcr.io/$PROJECT_ID/kibana:latest', 'elk/kibana']
+  args: ['build', '-t', 'us.gcr.io/$PROJECT_ID/kibana:latest', 'docker/elk/kibana']
 
 images:
 - 'us.gcr.io/$PROJECT_ID/suricata:latest'
