--- a/docker/cloudbuild.yaml
+++ b/docker/cloudbuild.yaml
@@ -13,7 +13,7 @@ steps:
   args: ['build', '-t', 'us.gcr.io/$PROJECT_ID/kibana:latest', 'docker/elk/kibana']
 - name: 'gcr.io/cloud-builders/docker'
   args: ['build', '-t', 'us.gcr.io/$PROJECT_ID/head:latest', 'docker/elk/head']
-
+timeout: 1200s
 images:
 - 'us.gcr.io/$PROJECT_ID/suricata:latest'
 - 'us.gcr.io/$PROJECT_ID/p0f:latest'
