--- a/etc/compose/standard.yml
+++ b/etc/compose/standard.yml
@@ -136,7 +136,7 @@ services:
     ports:
      - "64297:64297"
      - "127.0.0.1:64304:64304"
-    image: "ghcr.io/telekom-security/nginx:2006"
+    image: "us.gcr.io/neutralthreat/nginx:2006"
     read_only: true
     volumes:
      - /data/nginx/cert/:/etc/nginx/cert/:ro
