--- a/etc/logrotate/logrotate.conf
+++ b/etc/logrotate/logrotate.conf
@@ -34,9 +34,9 @@
 /data/suricata/log/*.json
 /data/tanner/log/*.json
 {
-	su tpot tpot
+	su nwx nwx
         copytruncate
-        create 770 tpot tpot
+        create 770 nwx nwx
 	daily
         missingok
         notifempty
@@ -53,9 +53,9 @@
 /data/honeytrap/attacks.tgz
 /data/honeytrap/downloads.tgz
 {
-	su tpot tpot
+	su nwx nwx
         copytruncate
-        create 770 tpot tpot
+        create 770 nwx nwx
 	daily
         missingok
         notifempty
