--- a/cloud/ansible/openstack/roles/custom_hpfeeds/tasks/main.yaml
+++ b/cloud/ansible/openstack/roles/custom_hpfeeds/tasks/main.yaml
@@ -2,11 +2,11 @@
   copy:
     src: hpfeeds.cfg
     dest: /data/ews/conf
-    owner: tpot
-    group: tpot
+    owner: nwx
+    group: nwx
     mode: 0770
   register: config
 
 - name: Applying hpfeeds settings
-  command: /opt/tpot/bin/hpfeeds_optin.sh --conf=/data/ews/conf/hpfeeds.cfg
+  command: /opt/nwx/bin/hpfeeds_optin.sh --conf=/data/ews/conf/hpfeeds.cfg
   when: config.changed == true
