--- a/cloud/ansible/openstack/roles/install/tasks/main.yaml
+++ b/cloud/ansible/openstack/roles/install/tasks/main.yaml
@@ -6,8 +6,8 @@
 
 - name: Cloning T-Pot install directory
   git:
-    repo: "https://github.com/telekom-security/tpotce.git"
-    dest: /root/tpot
+    repo: "https://github.com/telekom-security/nwxce.git"
+    dest: /root/nwx
 
 - name: Prepare to set user password
   set_fact:
@@ -24,18 +24,18 @@
 
 - name: Copy T-Pot configuration file
   template:
-    src: ../../../../../../iso/installer/tpot.conf.dist
-    dest: /root/tpot.conf
+    src: ../../../../../../iso/installer/nwx.conf.dist
+    dest: /root/nwx.conf
     owner: root
     group: root
     mode: 0644
 
 - name: Install T-Pot on instance -  be patient, this might take 15 to 30 minutes depending on the connection speed.
-  command: /root/tpot/iso/installer/install.sh --type=auto --conf=/root/tpot.conf
+  command: /root/nwx/iso/installer/install.sh --type=auto --conf=/root/nwx.conf
 
 - name: Delete T-Pot configuration file
   file:
-    path: /root/tpot.conf
+    path: /root/nwx.conf
     state: absent
 
 - name: Change unattended-upgrades to take default action
