--- a/etc/compose/sensor.yml
+++ b/etc/compose/sensor.yml
@@ -1,5 +1,5 @@
 # T-Pot (Sensor)
-# Do not erase ports sections, these are used by /opt/tpot/bin/rules.sh to setup iptables ACCEPT rules for NFQ (honeytrap / glutton)
+# Do not erase ports sections, these are used by /opt/nwx/bin/rules.sh to setup iptables ACCEPT rules for NFQ (honeytrap / glutton)
 version: '2.3'
 
 services:
