--- a/docker/suricata/Dockerfile.from.source
+++ b/docker/suricata/Dockerfile.from.source
@@ -1,7 +1,7 @@
 FROM alpine
 #
 # VARS
-ENV VER=5.0.2
+ENV VER=6.0.0
 #
 # Include dist
 ADD dist/ /root/dist/
@@ -51,7 +51,6 @@ RUN    apk -U add \
                  nspr-dev \
                  pcre-dev \
                  python3 \
-		 py3-pip \
                  rust \
                  yaml-dev && \
 #
@@ -60,8 +59,7 @@ RUN    apk -U add \
                libhtp \
                libhtp-dev && \
 #
-# Upgrade pip, install suricata-update to meet deps, however we will not be using it 
-# to reduce image (no python needed) and use the update script.
+# Upgrade pip, install suricata-update to meet deps
     pip3 install --no-cache-dir --upgrade pip && \
     pip3 install --no-cache-dir suricata-update && \
 #
@@ -85,24 +83,26 @@ RUN    apk -U add \
 	--enable-gccprotect \
 	--enable-pie \
 	--enable-luajit && \
-    make -j $(nproc) && \
-    make -j $(nproc) check && \
-    make -j $(nproc) install && \
-    make -j $(nproc) install-full && \
+    make && \
+    make check && \
+    make install && \
+    make install-full && \
 #
 # Setup user, groups and configs
     addgroup -g 2000 suri && \
     adduser -S -H -u 2000 -D -g 2000 suri && \
     chmod 644 /etc/suricata/*.config && \
-    cp /root/dist/suricata.yaml /etc/suricata/suricata.yaml && \
+    cp /root/dist/*.yaml /etc/suricata/ && \
+    cp /root/dist/*.conf /etc/suricata/ && \
     cp /root/dist/*.bpf /etc/suricata/ && \
     mkdir -p /etc/suricata/rules && \
     cp /opt/builder/rules/* /etc/suricata/rules/ && \
 #
-# Download the latest EmergingThreats ruleset, replace rulebase and enable all rules
+# Download the latest EmergingThreats OPEN ruleset
     cp /root/dist/update.sh /usr/bin/ && \
     chmod 755 /usr/bin/update.sh && \
-    update.sh OPEN && \
+    suricata-update update-sources && \
+    suricata-update --no-reload && \
 #
 # Clean up
     apk del --purge \
@@ -127,8 +127,6 @@ RUN    apk -U add \
                  nss-dev \
                  nspr-dev \
                  pcre-dev \
-		 python3 \
-                 rust \
                  yaml-dev && \
     rm -rf /opt/builder && \
     rm -rf /root/* && \
