--- a/docker/suricata/Dockerfile.from.source
+++ b/docker/suricata/Dockerfile.from.source
@@ -9,6 +9,7 @@ ADD dist/ /root/dist/
 # Install packages
 #RUN sed -i 's/dl-cdn/dl-2/g' /etc/apk/repositories && \
 RUN    apk -U add \
+		 py3-pip \
                  ca-certificates \
                  curl \
                  file \
